# EmbeddedJSONSignature

./: CMakeLists.txt  LICENSE  README.md
include/: EmbeddedJSONSignature.h
src/: EmbeddedJSONSignature.cpp
